# mailing_service

./: .envsample  .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_is_published_alter_blog_slug.py  0003_alter_blog_is_published.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixtures/: blog.json  groups.json  mail_sender.json  mailings_clients_messages.json
index_page/: apps.py  services.py  urls.py  views.py
index_page/templates/index_page/: index.html
mail_sender/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mail_sender/management/commands/: day.py  month.py  search_mailings.py  week.py
mail_sender/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0003_alter_mailing_start_mailing.py  0004_rename_massage_message_and_more.py  0005_alter_client_options.py  0006_alter_mailing_end_mailing_and_more.py  0007_remove_mailingtry_client_and_more.py  0008_alter_mailingtry_last_try_date.py  0009_alter_mailing_options.py  0010_client_owner_mailing_owner_message_owner.py  0011_alter_client_owner_alter_mailing_owner_and_more.py
mail_sender/templates/mail_sender/: base.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  (+6 more)
mail_sender/templatetags/: custom_tag.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
(+10 files in other folders)
