[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["Pinchuk Sergey <Pinboyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
django-stubs = "^5.1.0"
python-dotenv = "^1.0.1"
django-crontab = "^0.7.1"
black = "^24.10.0"
pillow = "^10.4.0"
django = "4.2"
pytils = "^0.4.1"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
